Initial running multi-armed BCF
& Move bcf_util to bcf_view & Move BCFPreprocessor to bcf_dataset; much slower than the two-armed version

--- a/notebooks/test_bcf_multi.ipynb
+++ b/notebooks/test_bcf_multi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,21 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:10<00:00, 19.19it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:38<00:00,  5.13it/s]\n"
      ]
     }
    ],
    "source": [
     "bcf = BCF(\n",
+    "    n_treat_arms=1,\n",
     "    n_mu_trees=100,       # Number of prognostic effect trees\n",
-    "    n_tau_trees=100,       # Number of treatment effect trees\n",
+    "    n_tau_trees=[100],       # Number of treatment effect trees\n",
     "    ndpost=100,          # Posterior samples\n",
     "    nskip=100,            # Burn-in iterations\n",
     "    random_state=42\n",
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,21 +121,21 @@
     "print(tree_sp.leaf_vals)\n",
     "# print(bcf.sampler.trace[-1].evaluate(z = np.zeros_like(y_train, dtype = bool), X = X_train)[0:10])\n",
     "\n",
-    "np.testing.assert_allclose(bcf.sampler.trace[-1].evaluate(z_train), bcf.sampler.trace[-1].evaluate(z_train, X_train))"
+    "np.testing.assert_allclose(bcf.sampler.trace[-1].evaluate(z_train.reshape(-1, 1)), bcf.sampler.trace[-1].evaluate(z_train.reshape(-1, 1), X_train))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bcf_result = bcf.predict_components(X_test, z_test)"
+    "bcf_result = bcf.predict_components(X_test, z_test.reshape(-1, 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,14 +144,39 @@
      "text": [
       "[ 0.03393351 -0.04673758 -0.39256706 -0.1203358   0.15368494  0.1379183\n",
       "  0.06406533 -0.1713516   0.12529618 -0.00822858]\n",
-      "[0.2910598  0.27810602 0.27812756 0.28658596 0.24263927 0.24092817\n",
-      " 0.21273204 0.29206197 0.23034141 0.29607209]\n"
+      "[[0.2910598 ]\n",
+      " [0.27810602]\n",
+      " [0.27812756]\n",
+      " [0.28658596]\n",
+      " [0.24263927]\n",
+      " [0.24092817]\n",
+      " [0.21273204]\n",
+      " [0.29206197]\n",
+      " [0.23034141]\n",
+      " [0.29607209]]\n"
      ]
     }
    ],
    "source": [
     "print(bcf_result[0][0:10])\n",
     "print(bcf_result[1][0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bcf_result[1][0:10].shape)"
    ]
   },
   {
@@ -162,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +268,7 @@
        " 'dt': 0.04965827443298727}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -277,15 +303,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.2910598  0.27810602 0.27812756 0.28658596 0.24263927 0.24092817\n",
-      " 0.21273204 0.29206197 0.23034141 0.29607209]\n",
+      "[[0.2910598 ]\n",
+      " [0.27810602]\n",
+      " [0.27812756]\n",
+      " [0.28658596]\n",
+      " [0.24263927]\n",
+      " [0.24092817]\n",
+      " [0.21273204]\n",
+      " [0.29206197]\n",
+      " [0.23034141]\n",
+      " [0.29607209]]\n",
       "[ 0.36622733  0.18484748 -1.02390533  0.05869356  0.50441698  0.47055727\n",
       " -0.13926953 -0.5953437   0.42559462  0.29425686]\n"
      ]
@@ -298,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
