--- a/notebooks/test_bcf_multi.ipynb
+++ b/notebooks/test_bcf_multi.ipynb
@@ -26,24 +26,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.02215361  0.39849321  0.08358079  0.50582743  0.50321077 -0.05778941\n",
-      "  0.48579968  0.3886612  -0.54313394  0.65882761  0.02723698 -0.00511971]\n"
+      "[ 0.56517481 -0.04621271 -0.27779943  0.53019707  0.98857901  0.44933973\n",
+      "  0.77858126  0.43837069 -0.01191688  0.875094  ]\n"
      ]
     }
    ],
    "source": [
     "proposal_probs = {\"grow\" : 0.5,\n",
     "                  \"prune\" : 0.5}\n",
-    "n_samples = 320\n",
+    "n_samples = 640\n",
     "generator = DataGenerator(n_samples=n_samples, n_features=2, noise=0.1, random_seed=42)\n",
     "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
     "z_rng = np.random.default_rng(0)\n",
-    "z = z_rng.binomial(1, 0.5, n_samples).astype(bool)\n",
-    "y = y + z * 0.5 - 0.5\n",
+    "z1 = z_rng.binomial(1, 0.5, n_samples).astype(bool)\n",
+    "z2 = ((1 - z1) * z_rng.binomial(1, 0.5, n_samples)).astype(bool)\n",
+    "z = np.column_stack((z1, z2))\n",
+    "y = y + z[:, 0] * 0.5 - z[:, 1] * 0.5\n",
+    "# z = z1.reshape(-1, 1)\n",
+    "# y = y + z[:, 0] * 0.5 - 0.5\n",
     "\n",
     "X_train, X_test, y_train, y_test, z_train, z_test = train_test_split(X, y, z, random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
-    "print(y_train[:12])"
+    "print(y_train[:10])"
    ]
   },
   {
@@ -55,11 +59,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.37365773 0.09446667]\n",
-      " [0.68071453 0.39363046]\n",
-      " [0.43209304 0.62730884]\n",
-      " [0.96623191 0.59604255]\n",
-      " [0.64386512 0.82276161]]\n"
+      "[[0.73489316 0.20240459]\n",
+      " [0.74882078 0.80138943]\n",
+      " [0.58106114 0.3468698 ]\n",
+      " [0.97069802 0.89312112]\n",
+      " [0.23855282 0.84940884]]\n"
      ]
     }
    ],
@@ -76,15 +80,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:38<00:00,  5.13it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:50<00:00,  3.98it/s]\n"
      ]
     }
    ],
    "source": [
     "bcf = BCF(\n",
-    "    n_treat_arms=1,\n",
+    "    n_treat_arms=z.shape[1],  # Number of treatment arms\n",
     "    n_mu_trees=100,       # Number of prognostic effect trees\n",
-    "    n_tau_trees=[100],       # Number of treatment effect trees\n",
+    "    n_tau_trees=[50, 50],       # Number of treatment effect trees\n",
     "    ndpost=100,          # Posterior samples\n",
     "    nskip=100,            # Burn-in iterations\n",
     "    random_state=42\n",
@@ -102,14 +106,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_1 <= 0.867 (split, n = 240)\n",
-      "\tX_1 <= 0.607 (split, n = 206)\n",
-      "\t\tVal: -0.035 (leaf, n = 139)\n",
-      "\t\tVal: -0.016 (leaf, n = 67)\n",
-      "\tVal: -0.011 (leaf, n = 34)\n",
-      "[ 1  1 -1 -1 -1 -2 -2 -2]\n",
-      "[        nan         nan -0.01145799 -0.03543598 -0.01615224         nan\n",
-      "         nan         nan]\n"
+      "X_1 <= 0.802 (split, n = 480)\n",
+      "\tVal: 0.040 (leaf, n = 374)\n",
+      "\tVal: -0.011 (leaf, n = 106)\n",
+      "[ 1 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
+      "[        nan  0.0403628  -0.01113588         nan         nan         nan\n",
+      "         nan         nan         nan         nan         nan         nan\n",
+      "         nan         nan         nan         nan]\n"
      ]
     }
    ],
@@ -121,7 +124,7 @@
     "print(tree_sp.leaf_vals)\n",
     "# print(bcf.sampler.trace[-1].evaluate(z = np.zeros_like(y_train, dtype = bool), X = X_train)[0:10])\n",
     "\n",
-    "np.testing.assert_allclose(bcf.sampler.trace[-1].evaluate(z_train.reshape(-1, 1)), bcf.sampler.trace[-1].evaluate(z_train.reshape(-1, 1), X_train))"
+    "np.testing.assert_allclose(bcf.sampler.trace[-1].evaluate(z_train), bcf.sampler.trace[-1].evaluate(z_train, X_train))"
    ]
   },
   {
@@ -130,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bcf_result = bcf.predict_components(X_test, z_test.reshape(-1, 1))"
+    "bcf_result = bcf.predict_components(X_test, z_test)"
    ]
   },
   {
@@ -142,18 +145,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.03393351 -0.04673758 -0.39256706 -0.1203358   0.15368494  0.1379183\n",
-      "  0.06406533 -0.1713516   0.12529618 -0.00822858]\n",
-      "[[0.2910598 ]\n",
-      " [0.27810602]\n",
-      " [0.27812756]\n",
-      " [0.28658596]\n",
-      " [0.24263927]\n",
-      " [0.24092817]\n",
-      " [0.21273204]\n",
-      " [0.29206197]\n",
-      " [0.23034141]\n",
-      " [0.29607209]]\n"
+      "[ 0.18081937  0.16190407 -0.04493251  0.15664016  0.07212702  0.15650407\n",
+      "  0.16830937  0.13487491  0.15732622  0.03827908]\n",
+      "[[ 0.21249684 -0.14761714]\n",
+      " [ 0.20908512 -0.18370751]\n",
+      " [ 0.22524417 -0.18702716]\n",
+      " [ 0.22611821 -0.18696958]\n",
+      " [ 0.22692862 -0.1954979 ]\n",
+      " [ 0.20886132 -0.18517991]\n",
+      " [ 0.21264844 -0.17227509]\n",
+      " [ 0.22662866 -0.18646481]\n",
+      " [ 0.21099638 -0.1674805 ]\n",
+      " [ 0.23044729 -0.1885336 ]]\n"
      ]
     }
    ],
@@ -171,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 1)\n"
+      "(10, 2)\n"
      ]
     }
    ],
@@ -183,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TLearner class"
+    "#### MLearner class"
    ]
   },
   {
@@ -192,29 +195,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "from sklearn import clone\n",
     "\n",
-    "class TLearner:\n",
-    "    def __init__(self, model_treated, model_control):\n",
-    "        self.model_treated = clone(model_treated)\n",
+    "def control_indices(z):\n",
+    "    result = np.zeros(z.shape[0], dtype=bool)\n",
+    "    for arm in range(z.shape[1]):\n",
+    "        result = result | z[:, arm]\n",
+    "    return ~result\n",
+    "\n",
+    "class MLearner:\n",
+    "    def __init__(self, n_treated_arms, model_treated, model_control):\n",
+    "        self.model_treated_list = [None] * n_treated_arms\n",
+    "        for i in range(n_treated_arms):\n",
+    "            self.model_treated_list[i] = clone(model_treated)\n",
     "        self.model_control = clone(model_control)\n",
     "\n",
     "    def fit(self, X, y, z):\n",
-    "        X_treated = X[z]\n",
-    "        y_treated = y[z]\n",
-    "        X_control = X[~z]\n",
-    "        y_control = y[~z]\n",
+    "        X_treated_list = [X[z[:, arm]] for arm in range(z.shape[1])]\n",
+    "        y_treated_list = [y[z[:, arm]] for arm in range(z.shape[1])]\n",
+    "        X_control = X[control_indices(z)]\n",
+    "        y_control = y[control_indices(z)]\n",
     "\n",
     "        # Fit the models.\n",
-    "        self.model_treated.fit(X_treated, y_treated)\n",
+    "        for i in range(len(self.model_treated_list)):\n",
+    "            self.model_treated_list[i].fit(X_treated_list[i], y_treated_list[i])\n",
     "        self.model_control.fit(X_control, y_control)\n",
     "        # return self\n",
     "\n",
     "    def predict(self, X, z):\n",
     "        # Predict outcome: if z is True, use model_treated; else, use model_control.\n",
     "        preds = np.empty(len(X))\n",
-    "        preds[z] = self.model_treated.predict(X[z])\n",
-    "        preds[~z] = self.model_control.predict(X[~z])\n",
+    "        preds[control_indices(z)] = self.model_control.predict(X[control_indices(z)])\n",
+    "        for arm in range(z.shape[1]):\n",
+    "            preds[z[:, arm]] = self.model_treated_list[arm].predict(X[z[:, arm]])\n",
     "        return preds"
    ]
   },
@@ -246,11 +260,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tlearner_rf = TLearner(model_treated=rf, model_control=rf)\n",
+    "nta = z.shape[1]  # Number of treatment arms\n",
+    "tlearner_rf = MLearner(n_treated_arms=nta, model_treated=rf, model_control=rf)\n",
     "tlearner_rf.fit(X_train, y_train, z_train)\n",
-    "tlearner_lr = TLearner(model_treated=lr, model_control=lr)\n",
+    "tlearner_lr = MLearner(n_treated_arms=nta, model_treated=lr, model_control=lr)\n",
     "tlearner_lr.fit(X_train, y_train, z_train)\n",
-    "tlearner_dt = TLearner(model_treated=dt, model_control=dt)\n",
+    "tlearner_dt = MLearner(n_treated_arms=nta, model_treated=dt, model_control=dt)\n",
     "tlearner_dt.fit(X_train, y_train, z_train)"
    ]
   },
@@ -262,10 +277,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bcf': 0.0265957411855544,\n",
-       " 'rf': 0.027995018511320614,\n",
-       " 'lr': 0.04275738222331536,\n",
-       " 'dt': 0.04965827443298727}"
+       "{'bcf': 0.023985779987415565,\n",
+       " 'rf': 0.021441280609918477,\n",
+       " 'lr': 0.05466893346335514,\n",
+       " 'dt': 0.03223509459291045}"
       ]
      },
      "execution_count": 12,
@@ -293,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0265957411855544\n"
+      "0.023985779987415565\n"
      ]
     }
    ],
@@ -310,62 +325,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.2910598 ]\n",
-      " [0.27810602]\n",
-      " [0.27812756]\n",
-      " [0.28658596]\n",
-      " [0.24263927]\n",
-      " [0.24092817]\n",
-      " [0.21273204]\n",
-      " [0.29206197]\n",
-      " [0.23034141]\n",
-      " [0.29607209]]\n",
-      "[ 0.36622733  0.18484748 -1.02390533  0.05869356  0.50441698  0.47055727\n",
-      " -0.13926953 -0.5953437   0.42559462  0.29425686]\n"
+      "[[ 0.21249684 -0.14761714]\n",
+      " [ 0.20908512 -0.18370751]\n",
+      " [ 0.22524417 -0.18702716]\n",
+      " [ 0.22611821 -0.18696958]\n",
+      " [ 0.22692862 -0.1954979 ]\n",
+      " [ 0.20886132 -0.18517991]\n",
+      " [ 0.21264844 -0.17227509]\n",
+      " [ 0.22662866 -0.18646481]\n",
+      " [ 0.21099638 -0.1674805 ]\n",
+      " [ 0.23044729 -0.1885336 ]]\n",
+      "[-0.00284772 -0.0248307  -0.1088195   0.04648417  0.10340043  0.12990108\n",
+      "  0.13613258 -0.03673484  0.04675836  0.09127936]\n",
+      "[ 0.12340614 -0.01422866 -0.54008018  0.43227173  0.78862283  0.95454264\n",
+      "  0.99355787 -0.08876015  0.4339884   0.71273312]\n",
+      "[ 0.02738038 -0.00431336 -0.61648281  0.40993078  0.72292736  1.0178741\n",
+      "  1.11825307  0.08045703  0.53730523  0.63120253]\n"
      ]
     }
    ],
    "source": [
     "print(bcf_result[1][0:10])\n",
-    "print(bcf_result[2][0:10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.11043741638090805\n"
-     ]
-    }
-   ],
-   "source": [
-    "naive = np.zeros_like(y_test)\n",
-    "naive[z_test] = np.mean(y_train[z_train])\n",
-    "naive[~z_test] = np.mean(y_train[~z_train])\n",
+    "resultq = bcf_result[0][0:10] + np.sum(z_test[0:10] * bcf_result[1][0:10], axis=1)\n",
+    "print(bcf.preprocessor.transform_y(resultq))\n",
     "\n",
-    "print(mean_squared_error(naive, y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.22942363300485438\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mean_squared_error(np.zeros_like(y_test), y_test))"
+    "print(bcf_result[2][0:10])\n",
+    "print(y_test[0:10])\n",
+    "# print(bcf.preprocessor.backtransform_y(y_test[0:10]))\n",
+    "\n",
+    "# print(bcf_result[0][0] + z_test[0, 0] * bcf_result[1][0, 0] + z_test[0, 1] * bcf_result[1][0, 1])\n",
+    "# print(bcf.preprocessor.transform_y(bcf_result[0][0] + z_test[0, 0] * bcf_result[1][0, 0] + z_test[0, 1] * bcf_result[1][0, 1]))"
    ]
   }
  ],
