Fix multiple bugs
Now BART allows for incremental data :D

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -277,6 +277,26 @@
    "source": [
     "if all([(bart.sampler.trace[-1].trees[i].evaluate() == bart.sampler.trace[-1].trees[i].evaluate(X_train)).all()\n",
     "            for i in range(100)]):\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "if np.allclose(bart.trace[-1].evaluate(), bart.trace[-1].evaluate(X_train)):\n",
     "    print(\"True\")\n",
     "else:\n",
     "    print(\"False\")"
