--- a/notebooks/01_debug_augdata.ipynb
+++ b/notebooks/01_debug_augdata.ipynb
@@ -51,14 +51,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 32.71it/s]\n"
+      "Iterations: 100%|██████████| 150/150 [00:04<00:00, 32.28it/s]\n"
      ]
     }
    ],
    "source": [
     "# profiler = Profiler()\n",
     "# profiler.start()\n",
-    "bart = DefaultBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "bart = DefaultBART(ndpost=50, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
     "bart.fit(X_train, y_train)\n",
     "# profiler.stop()\n",
     "# profiler.print()"
@@ -70,13 +70,51 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 39/39 [00:17<00:00,  2.18it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 32.76it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<bart_playground.bart.DefaultBART at 0x263439158d0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "# profiler = Profiler()\n",
+    "# profiler.start()\n",
+    "test_n = X_test.shape[0]\n",
+    "for i in tqdm(range(test_n - 1)):\n",
+    "    # use i:(i+1) to avoid dimensional reduction\n",
+    "    bart.update_fit(X_test[i:(i+1), :], y_test[i:(i+1)], add_ndpost=10, add_nskip=5, quietly=True)\n",
+    "# profiler.stop()\n",
+    "# profiler.print()\n",
+    "bart.update_fit(X_test[-1:, :], y_test[-1:], add_ndpost=40, add_nskip=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 1 1 1 1 4 1 2 2 2 1 1 0 1 1 1 1 2 2 1 3 1 1 1 1 1 1 1 1 1 1 1 2 1 1\n",
-      " 2 1 1 2 1 1 1 1 1 1 3 2 1 3 2 1 1 1 1 2 1 1 1 2 1 1 0 1 2 1 1 1 1 1 1 3 1\n",
-      " 1 2 1 2 1 1 2 1 0 1 1 0 2 1 0 1 1 2 1 1 1 1 0 1 1 1]\n",
-      "(array([ 7, 22, 47, 50, 72], dtype=int64),)\n"
+      "[1 1 0 1 1 1 1 1 1 0 2 2 1 2 1 1 1 1 1 1 1 1 2 0 1 2 1 1 1 3 1 1 1 2 1 1 1\n",
+      " 1 1 2 2 1 1 1 1 1 1 1 0 1 0 1 2 3 1 2 1 1 1 1 2 2 0 1 3 1 2 1 1 0 1 2 1 2\n",
+      " 1 1 2 1 1 1 1 1 1 2 1 1 2 2 2 0 3 1 1 1 1 1 1 2 1 1]\n",
+      "(array([29, 53, 64, 90], dtype=int64),)\n"
      ]
     }
    ],
@@ -90,23 +128,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eps_sigma2': array([0.00573341])}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(bart.sampler.trace[-1].global_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -114,29 +135,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_1 <= 0.116 (split, n = 120)\n",
-      "\tX_0 <= 0.093 (split, n = 15)\n",
-      "\t\tVal: 0.003 (leaf, n = 1)\n",
-      "\t\tVal: 0.008 (leaf, n = 14)\n",
-      "\tX_0 <= 0.287 (split, n = 105)\n",
-      "\t\tVal: 0.005 (leaf, n = 34)\n",
-      "\t\tVal: 0.035 (leaf, n = 71)\n",
-      "[ 1  0  0 -1 -1 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[       nan        nan        nan 0.00320229 0.00783413 0.00538357\n",
-      " 0.03476661        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan]\n"
+      "{'eps_sigma2': array([0.00762701])}\n"
      ]
     }
    ],
    "source": [
-    "from bart_playground import visualize_tree\n",
-    "tree_sp : Tree = bart.sampler.trace[-1].trees[72]\n",
-    "\n",
-    "print(tree_sp)\n",
-    "print(tree_sp.vars)\n",
-    "print(tree_sp.leaf_vals)\n",
-    "# print(tree_sp.node_indicators)\n",
-    "# visualize_tree(tree_sp, tree_sp)"
+    "print(bart.trace[-1].global_params)"
    ]
   },
   {
@@ -148,17 +152,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y_train where X_train[:,0] <= 0.830 mean: 0.28478345154810286\n",
-      "y_train where X_train[:,0] > 0.830 mean: 0.5282667945838203\n"
+      "X_0 <= 0.375 (split, n = 120)\n",
+      "\tVal: 0.021 (leaf, n = 70)\n",
+      "\tVal: -0.007 (leaf, n = 90)\n",
+      "[ 0 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
+      "[        nan  0.02123494 -0.0067989          nan         nan         nan\n",
+      "         nan         nan         nan         nan         nan         nan\n",
+      "         nan         nan         nan         nan]\n"
      ]
     }
    ],
    "source": [
-    "y_train_le = y_train[X_train[:, 0] <= 0.830]\n",
-    "y_train_gt = y_train[X_train[:, 0] > 0.830]\n",
+    "tree_sp : Tree = bart.trace[-1].trees[72]\n",
     "\n",
-    "print(\"y_train where X_train[:,0] <= 0.830 mean:\", y_train_le.mean())\n",
-    "print(\"y_train where X_train[:,0] > 0.830 mean:\", y_train_gt.mean())"
+    "print(tree_sp)\n",
+    "print(tree_sp.vars)\n",
+    "print(tree_sp.leaf_vals)"
    ]
   },
   {
@@ -195,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.023709398713852352,\n",
+       "{'bart': 0.012859467216255988,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02328283761397566}"
@@ -229,8 +238,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.36899463  0.33800563  0.27153915  0.31520681  0.34463921  0.38089753\n",
-      " -0.41651139  0.39616038 -0.11335028 -0.00896246  0.22936939  0.34190874]\n",
+      "[ 0.36285441  0.34324054  0.21345889  0.30186148  0.37323052  0.34360495\n",
+      " -0.28949465  0.43301502 -0.0490685   0.16001756  0.2003634   0.38512668]\n",
       "[ 0.34923863  0.42552948  0.17644883  0.38525745  0.35193784  0.46601776\n",
       " -0.49488025  0.4582753   0.0037892   0.14973307  0.30298339  0.25992003]\n"
      ]
@@ -247,18 +256,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.10534048469161521"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "mean_squared_error(y_test, np.ones_like(y_test) * y_test.mean())"
+    "if all([(bart.trace[-1].trees[i].evaluate()[range(X_train.shape[0]), ] == bart.trace[-1].trees[i].evaluate(X_train)).all()\n",
+    "            for i in range(100)]):\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
    ]
   },
   {
@@ -275,8 +285,7 @@
     }
    ],
    "source": [
-    "if all([(bart.sampler.trace[-1].trees[i].evaluate() == bart.sampler.trace[-1].trees[i].evaluate(X_train)).all()\n",
-    "            for i in range(100)]):\n",
+    "if np.allclose(bart.trace[-1].evaluate()[range(X_train.shape[0]), ], bart.trace[-1].evaluate(X_train)):\n",
     "    print(\"True\")\n",
     "else:\n",
     "    print(\"False\")"
