Fix an issue that slows down fitting

--- a/notebooks/test_bcf_multi.ipynb
+++ b/notebooks/test_bcf_multi.ipynb
@@ -75,22 +75,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations:   0%|          | 0/200 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 200/200 [00:58<00:00,  3.40it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bcf = BCF(\n",
     "    n_treat_arms=z.shape[1],  # Number of treatment arms\n",
@@ -99,14 +84,54 @@
     "    ndpost=100,          # Posterior samples\n",
     "    nskip=100,            # Burn-in iterations\n",
     "    random_state=42\n",
-    ")\n",
-    "\n",
-    "bcf.fit(X_train, y_train, z_train)"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 200/200 [00:23<00:00,  8.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file 'profile.prof'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%prun -s cumtime -D profile.prof -q bcf.fit(X_train, y_train, z_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gprof2dot -f pstats profile.prof -o profile.dot\n",
+    "!dot -Tpng profile.dot -o profile.png"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,11 +223,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
     "from sklearn import clone\n",
     "\n",
     "def control_indices(z):\n",
@@ -241,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +314,7 @@
        " 'dt': 0.03223509459291045}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -357,11 +381,7 @@
     "print(bcf.preprocessor.transform_y(resultq))\n",
     "\n",
     "print(bcf_result[2][0:10])\n",
-    "print(y_test[0:10])\n",
-    "# print(bcf.preprocessor.backtransform_y(y_test[0:10]))\n",
-    "\n",
-    "# print(bcf_result[0][0] + z_test[0, 0] * bcf_result[1][0, 0] + z_test[0, 1] * bcf_result[1][0, 1])\n",
-    "# print(bcf.preprocessor.transform_y(bcf_result[0][0] + z_test[0, 0] * bcf_result[1][0, 0] + z_test[0, 1] * bcf_result[1][0, 1]))"
+    "print(y_test[0:10])"
    ]
   }
  ],
