--- a/notebooks/01_debug_incdata.ipynb
+++ b/notebooks/01_debug_incdata.ipynb
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 150/150 [00:04<00:00, 32.28it/s]\n"
+      "Iterations: 100%|██████████| 150/150 [00:04<00:00, 31.50it/s]\n"
      ]
     }
    ],
@@ -73,14 +73,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 39/39 [00:17<00:00,  2.18it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 32.76it/s]\n"
+      "100%|██████████| 39/39 [00:18<00:00,  2.10it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 31.26it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bart_playground.bart.DefaultBART at 0x263439158d0>"
+       "<bart_playground.bart.DefaultBART at 0x16c9a7b6310>"
       ]
      },
      "execution_count": 4,
