Add BART profile

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -56,12 +56,18 @@
     }
    ],
    "source": [
-    "# profiler = Profiler()\n",
-    "# profiler.start()\n",
-    "bart = DefaultBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
-    "bart.fit(X_train, y_train)\n",
-    "# profiler.stop()\n",
-    "# profiler.print()"
+    "bart = DefaultBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%prun -s cumtime -D profile_bart.prof -q bart.fit(X_train, y_train)\n",
+    "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
+    "!dot -Tpng profile_bart.dot -o profile_bart.png"
    ]
   },
   {
