--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -51,12 +51,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:05<00:00, 33.93it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:05<00:00, 51.27it/s] \n"
      ]
     }
    ],
    "source": [
-    "bart = DefaultBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "bart = DefaultBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
     "bart.fit(X_train, y_train)"
    ]
   },
@@ -69,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:08<00:00, 61.14it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:11<00:00, 43.39it/s]"
      ]
     },
     {
@@ -78,6 +78,13 @@
      "text": [
       " \n",
       "*** Profile stats marshalled to file 'profile_bart.prof'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -97,10 +104,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 1 1 1 1 4 1 2 2 2 1 1 0 1 1 1 1 2 2 1 3 1 1 1 1 1 1 1 1 1 1 1 2 1 1\n",
-      " 2 1 1 2 1 1 1 1 1 1 3 2 1 3 2 1 1 1 1 2 1 1 1 2 1 1 0 1 2 1 1 1 1 1 1 3 1\n",
-      " 1 2 1 2 1 1 2 1 0 1 1 0 2 1 0 1 1 2 1 1 1 1 0 1 1 1]\n",
-      "(array([ 7, 22, 47, 50, 72], dtype=int64),)\n"
+      "[1 1 1 1 1 1 1 2 1 1 1 2 0 1 2 2 1 2 1 3 1 1 0 2 1 1 1 1 1 1 1 1 1 4 1 1 1\n",
+      " 1 1 1 3 1 1 1 1 2 1 1 2 2 1 1 1 1 1 1 1 1 2 2 1 3 1 1 0 4 1 1 1 0 1 1 1 1\n",
+      " 1 1 1 1 1 1 2 1 1 2 1 1 1 1 2 1 3 1 2 1 1 0 1 1 1 1]\n",
+      "(array([19, 33, 40, 61, 65, 90], dtype=int64),)\n"
      ]
     }
    ],
@@ -121,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00573341])}\n"
+      "{'eps_sigma2': array([0.00740722])}\n"
      ]
     }
    ],
@@ -138,56 +145,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_1 <= 0.116 (split, n = 120)\n",
-      "\tX_0 <= 0.093 (split, n = 15)\n",
-      "\t\tVal: 0.003 (leaf, n = 1)\n",
-      "\t\tVal: 0.008 (leaf, n = 14)\n",
-      "\tX_0 <= 0.287 (split, n = 105)\n",
-      "\t\tVal: 0.005 (leaf, n = 34)\n",
-      "\t\tVal: 0.035 (leaf, n = 71)\n",
-      "[ 1  0  0 -1 -1 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[       nan        nan        nan 0.00320229 0.00783413 0.00538357\n",
-      " 0.03476661        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan]\n"
+      "X_0 <= 0.049 (split, n = 120)\n",
+      "\tVal: -0.014 (leaf, n = 6)\n",
+      "\tX_0 <= 0.247 (split, n = 114)\n",
+      "\t\tVal: 0.028 (leaf, n = 29)\n",
+      "\t\tX_1 <= 0.455 (split, n = 85)\n",
+      "\t\t\tVal: 0.038 (leaf, n = 37)\n",
+      "\t\t\tVal: -0.038 (leaf, n = 48)\n",
+      "[ 0 -1  0 -2 -2 -1  1 -2 -2 -2 -2 -2 -2 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2\n",
+      " -2 -2 -2 -2 -2 -2 -2 -2]\n",
+      "[        nan -0.01361766         nan         nan         nan  0.02776888\n",
+      "         nan         nan         nan         nan         nan         nan\n",
+      "         nan  0.03843378 -0.03766617         nan         nan         nan\n",
+      "         nan         nan         nan         nan         nan         nan\n",
+      "         nan         nan         nan         nan         nan         nan\n",
+      "         nan         nan]\n"
      ]
     }
    ],
    "source": [
     "from bart_playground import visualize_tree\n",
-    "tree_sp : Tree = bart.sampler.trace[-1].trees[72]\n",
+    "tree_sp : Tree = bart.sampler.trace[-1].trees[90]\n",
     "\n",
     "print(tree_sp)\n",
     "print(tree_sp.vars)\n",
-    "print(tree_sp.leaf_vals)\n",
-    "# print(tree_sp.node_indicators)\n",
-    "# visualize_tree(tree_sp, tree_sp)"
+    "print(tree_sp.leaf_vals)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_train where X_train[:,0] <= 0.830 mean: 0.28478345154810286\n",
-      "y_train where X_train[:,0] > 0.830 mean: 0.5282667945838203\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_train_le = y_train[X_train[:, 0] <= 0.830]\n",
-    "y_train_gt = y_train[X_train[:, 0] > 0.830]\n",
-    "\n",
-    "print(\"y_train where X_train[:,0] <= 0.830 mean:\", y_train_le.mean())\n",
-    "print(\"y_train where X_train[:,0] > 0.830 mean:\", y_train_gt.mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,19 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.023704739736902458,\n",
+       "{'bart': 0.022375086326237227,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02328283761397566}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,15 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.36899463  0.33800563  0.27153915  0.31520681  0.34463921  0.38089753\n",
-      " -0.41651139  0.39616038 -0.11335028 -0.00896246  0.22936939  0.34190874]\n",
+      "[ 0.39415156  0.28469554  0.36146022  0.37815067  0.33273601  0.38164505\n",
+      " -0.34399068  0.38194264 -0.13325786  0.12870074  0.34503752  0.27274111]\n",
       "[ 0.34923863  0.42552948  0.17644883  0.38525745  0.35193784  0.46601776\n",
       " -0.49488025  0.4582753   0.0037892   0.14973307  0.30298339  0.25992003]\n"
      ]
@@ -267,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +263,7 @@
        "0.10534048469161521"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
