Apply similar changes to speed up BCF
- bcf_params.py: avoid redundant deepcopy
- bcf_sampler.py: cache random moves

--- a/notebooks/test_bcf_incremental.ipynb
+++ b/notebooks/test_bcf_incremental.ipynb
@@ -16,14 +16,12 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import sys\n",
     "from tqdm import tqdm\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "from bart_playground.bcf.bcf import BCF\n",
-    "from bart_playground.params import Tree\n",
     "from bart_playground import *"
    ]
   },
@@ -43,17 +41,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial training set size: 200\n",
-      "Incremental data set size: 150\n",
-      "Test set size: 150\n",
+      "Initial training set size: 20\n",
+      "Incremental data set size: 380\n",
+      "Test set size: 100\n",
       "\n",
       "Sample initial training data:\n",
-      "X: [[0.09407196 0.88965642]\n",
-      " [0.64923316 0.94059441]\n",
-      " [0.98554017 0.46497346]]\n",
-      "y: [0.90841765 0.86774589 0.53636982]\n",
-      "z: [[ True False]\n",
-      " [ True False]\n",
+      "X: [[0.14617324 0.82466419]\n",
+      " [0.53606804 0.51422287]\n",
+      " [0.65292213 0.95534943]]\n",
+      "y: [0.54945567 0.53520345 0.52929338]\n",
+      "z: [[False False]\n",
+      " [False False]\n",
       " [False False]]\n"
      ]
     }
@@ -78,8 +76,8 @@
     "y = y + z[:, 0] * 0.5 - z[:, 1] * 0.5\n",
     "\n",
     "# Split into initial training, incremental and test sets\n",
-    "X_init, X_temp, y_init, y_temp, z_init, z_temp = train_test_split(X, y, z, test_size=0.6, random_state=42)\n",
-    "X_inc, X_test, y_inc, y_test, z_inc, z_test = train_test_split(X_temp, y_temp, z_temp, test_size=0.5, random_state=42)\n",
+    "X_init, X_temp, y_init, y_temp, z_init, z_temp = train_test_split(X, y, z, test_size=0.96, random_state=42)\n",
+    "X_inc, X_test, y_inc, y_test, z_inc, z_test = train_test_split(X_temp, y_temp, z_temp, test_size=20/96, random_state=42)\n",
     "\n",
     "print(f\"Initial training set size: {X_init.shape[0]}\")\n",
     "print(f\"Incremental data set size: {X_inc.shape[0]}\")\n",
@@ -109,7 +107,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:10<00:00, 18.60it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 29.24it/s]\n"
      ]
     }
    ],
@@ -132,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate model before incremental updates"
+    "## Update model with incremental data"
    ]
   },
   {
@@ -141,66 +139,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE before incremental updates: 0.031293\n",
-      "\n",
-      "Sample treatment effects before update:\n",
-      "[[ 0.27333854 -0.27253622]\n",
-      " [ 0.21708253 -0.22594593]\n",
-      " [ 0.22734984 -0.22431407]\n",
-      " [ 0.24490588 -0.33603739]\n",
-      " [ 0.205646   -0.17779012]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get predictions on test set before incremental update\n",
-    "before_update_preds = bcf.predict(X_test, z_test)\n",
-    "before_update_mse = mean_squared_error(y_test, before_update_preds)\n",
-    "print(f\"MSE before incremental updates: {before_update_mse:.6f}\")\n",
-    "\n",
-    "# Get component predictions (mu, tau, y)\n",
-    "before_mu, before_tau, _ = bcf.predict_components(X_test, z_test)\n",
-    "\n",
-    "# Display treatment effects for first few samples\n",
-    "print(\"\\nSample treatment effects before update:\")\n",
-    "print(before_tau[:5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Update model with incremental data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:10<00:00, 18.55it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [00:10<00:00, 18.43it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [00:10<00:00, 18.69it/s]\n",
-      "100%|██████████| 149/149 [01:59<00:00,  1.25it/s]\n",
-      "Iterations: 100%|██████████| 120/120 [00:06<00:00, 18.65it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 63.60it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 61.19it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 64.60it/s]\n",
+      "100%|██████████| 380/380 [00:07<00:00, 48.86it/s]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<bart_playground.bcf.bcf.BCF at 0x2422e138890>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -231,25 +177,17 @@
     "\n",
     "# Update one sample at a time\n",
     "inc_n = X_inc.shape[0]\n",
-    "for i in tqdm(range(inc_n - 1)):\n",
+    "for i in tqdm(range(inc_n)):\n",
     "    # Use i:(i+1) to maintain dimensions\n",
     "    bcf_incremental.update_fit(\n",
     "        X_inc[i:(i+1), :], \n",
     "        y_inc[i:(i+1)], \n",
     "        z_inc[i:(i+1), :], \n",
-    "        add_ndpost=10, \n",
-    "        add_nskip=5, \n",
+    "        add_ndpost=1, \n",
+    "        add_nskip=0, \n",
     "        quietly=True\n",
     "    )\n",
-    "\n",
-    "# Update with final sample\n",
-    "bcf_incremental.update_fit(\n",
-    "    X_inc[-1:, :], \n",
-    "    y_inc[-1:], \n",
-    "    z_inc[-1:, :], \n",
-    "    add_ndpost=100, \n",
-    "    add_nskip=20\n",
-    ")"
+    "    "
    ]
   },
   {
@@ -261,21 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE before any updates: 0.031293\n",
-      "MSE after batch update: 0.029690\n",
-      "MSE after incremental updates: 0.028388\n"
+      "MSE before any updates: 0.077285\n",
+      "MSE after batch update: 0.033961\n",
+      "MSE after incremental updates: 0.032902\n"
      ]
     }
    ],
    "source": [
-    "# Evaluate both methods\n",
+    "before_update_preds = bcf.predict(X_test, z_test)\n",
+    "before_update_mse = mean_squared_error(y_test, before_update_preds)\n",
+    "\n",
     "batch_preds = bcf_batch_update.predict(X_test, z_test)\n",
     "batch_mse = mean_squared_error(y_test, batch_preds)\n",
     "\n",
@@ -296,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -304,19 +244,21 @@
      "output_type": "stream",
      "text": [
       "Sample mu tree before updates:\n",
-      "X_0 <= 0.180 (split, n = 200)\n",
-      "\tVal: 0.018 (leaf, n = 52)\n",
-      "\tVal: 0.043 (leaf, n = 148)\n",
+      "X_0 <= 0.199 (split, n = 20)\n",
+      "\tVal: 0.010 (leaf, n = 6)\n",
+      "\tVal: -0.036 (leaf, n = 14)\n",
       "\n",
       "Sample mu tree after batch update:\n",
-      "X_0 <= 0.754 (split, n = 200)\n",
-      "\tVal: 0.001 (leaf, n = 262)\n",
-      "\tVal: 0.026 (leaf, n = 88)\n",
+      "X_1 <= 0.808 (split, n = 20)\n",
+      "\tVal: 0.000 (leaf, n = 320)\n",
+      "\tVal: -0.019 (leaf, n = 80)\n",
       "\n",
       "Sample mu tree after incremental updates:\n",
-      "X_1 <= 0.561 (split, n = 200)\n",
-      "\tVal: -0.026 (leaf, n = 189)\n",
-      "\tVal: -0.006 (leaf, n = 161)\n"
+      "X_0 <= 0.936 (split, n = 20)\n",
+      "\tX_1 <= 0.514 (split, n = 377)\n",
+      "\t\tVal: 0.006 (leaf, n = 188)\n",
+      "\t\tVal: 0.007 (leaf, n = 189)\n",
+      "\tVal: 0.040 (leaf, n = 23)\n"
      ]
     }
    ],
@@ -342,21 +284,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:10<00:00, 19.19it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 60.37it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE with model fit on all data at once: 0.029779\n"
+      "MSE with model fit on all data at once: 0.031418\n"
      ]
     }
    ],
@@ -393,21 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial training only: 0.031293\n",
-      "Batch update: 0.029690\n",
-      "Incremental updates: 0.028388\n",
-      "Full data from scratch: 0.029779\n",
-      "\n",
-      "Prediction correlations:\n",
-      "Batch update vs. Full data: 0.988708\n",
-      "Incremental updates vs. Full data: 0.987984\n"
+      "Initial training only: 0.077285\n",
+      "Batch update: 0.033961\n",
+      "Incremental updates: 0.032902\n",
+      "Full data from scratch: 0.031418\n"
      ]
     }
    ],
@@ -421,14 +359,7 @@
     "}\n",
     "\n",
     "for name, mse in results.items():\n",
-    "    print(f\"{name}: {mse:.6f}\")\n",
-    "\n",
-    "# Calculate prediction correlations\n",
-    "from scipy.stats import pearsonr\n",
-    "\n",
-    "print(\"\\nPrediction correlations:\")\n",
-    "print(f\"Batch update vs. Full data: {pearsonr(batch_preds, full_preds)[0]:.6f}\")\n",
-    "print(f\"Incremental updates vs. Full data: {pearsonr(incremental_preds, full_preds)[0]:.6f}\")"
+    "    print(f\"{name}: {mse:.6f}\")"
    ]
   }
  ],
