--- a/notebooks/test_bcf_multi.ipynb
+++ b/notebooks/test_bcf_multi.ipynb
@@ -73,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 55.26it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "bcf = BCF(\n",
     "    n_treat_arms=z.shape[1],  # Number of treatment arms\n",
@@ -96,7 +104,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:17<00:00, 11.37it/s]"
+      "Iterations:   0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 2/2 [00:03<00:00,  1.91s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Just to hint for compilation\n",
+    "bcf2 = BCF(\n",
+    "    n_treat_arms=z.shape[1], n_mu_trees=100, n_tau_trees=[50, 50], ndpost=1, nskip=1, random_state=42\n",
+    ")\n",
+    "bcf2.fit(X_train, y_train, z_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 200/200 [00:05<00:00, 36.41it/s]"
      ]
     },
     {
@@ -121,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,18 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_1 <= 0.802 (split, n = 480)\n",
-      "\tVal: 0.040 (leaf, n = 374)\n",
-      "\tVal: -0.011 (leaf, n = 106)\n",
-      "[ 1 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[        nan  0.0403628  -0.01113588         nan         nan         nan\n",
+      "X_0 <= 0.441 (split, n = 480)\n",
+      "\tX_1 <= 0.416 (split, n = 221)\n",
+      "\t\tVal: -0.038 (leaf, n = 90)\n",
+      "\t\tVal: -0.009 (leaf, n = 131)\n",
+      "\tVal: 0.014 (leaf, n = 259)\n",
+      "[ 0  1 -1 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
+      "[        nan         nan  0.0139598  -0.03781563 -0.00940739         nan\n",
       "         nan         nan         nan         nan         nan         nan\n",
       "         nan         nan         nan         nan]\n"
      ]
@@ -161,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,25 +208,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.18051831  0.16209856 -0.04518919  0.15690085  0.07207592  0.15690277\n",
-      "  0.16784169  0.13487928  0.15733429  0.03824496]\n",
-      "[[ 0.21271202 -0.1468833 ]\n",
-      " [ 0.20912577 -0.1841238 ]\n",
-      " [ 0.22543674 -0.18707226]\n",
-      " [ 0.22593359 -0.18726222]\n",
-      " [ 0.22674401 -0.19591419]\n",
-      " [ 0.20890197 -0.1855962 ]\n",
-      " [ 0.21286361 -0.17232019]\n",
-      " [ 0.22644404 -0.1868811 ]\n",
-      " [ 0.21103702 -0.16711784]\n",
-      " [ 0.23043721 -0.18857871]]\n"
+      "[ 0.18912502  0.1735647  -0.01754936  0.15050377  0.01464981  0.19353664\n",
+      "  0.18154303  0.16566044  0.17730278 -0.00757243]\n",
+      "[[ 0.20732212 -0.17476558]\n",
+      " [ 0.20647187 -0.18653574]\n",
+      " [ 0.21389026 -0.19276108]\n",
+      " [ 0.26435612 -0.18038378]\n",
+      " [ 0.25933444 -0.18163852]\n",
+      " [ 0.20825599 -0.19500159]\n",
+      " [ 0.20737898 -0.18777154]\n",
+      " [ 0.2571358  -0.17876338]\n",
+      " [ 0.2078754  -0.1760631 ]\n",
+      " [ 0.26130818 -0.18408952]]\n"
      ]
     }
    ],
@@ -199,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,19 +340,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bcf': 0.02397050507288578,\n",
+       "{'bcf': 0.0234999515646783,\n",
        " 'rf': 0.021441280609918477,\n",
        " 'lr': 0.05466893346335514,\n",
        " 'dt': 0.03223509459291045}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,23 +370,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.02397050507288578\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mean_squared_error(bcf_result[2], y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -356,32 +377,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.21271202 -0.1468833 ]\n",
-      " [ 0.20912577 -0.1841238 ]\n",
-      " [ 0.22543674 -0.18707226]\n",
-      " [ 0.22593359 -0.18726222]\n",
-      " [ 0.22674401 -0.19591419]\n",
-      " [ 0.20890197 -0.1855962 ]\n",
-      " [ 0.21286361 -0.17232019]\n",
-      " [ 0.22644404 -0.1868811 ]\n",
-      " [ 0.21103702 -0.16711784]\n",
-      " [ 0.23043721 -0.18857871]]\n",
-      "[-0.00267475 -0.02491934 -0.10894011  0.04658836  0.10330623  0.13007667\n",
-      "  0.13603167 -0.03689946  0.04676158  0.09126169]\n",
-      "[ 0.12448908 -0.01478366 -0.54083532  0.43292404  0.78803302  0.95564197\n",
-      "  0.99292605 -0.08979086  0.43400858  0.7126225 ]\n",
-      "[ 0.02738038 -0.00431336 -0.61648281  0.40993078  0.72292736  1.0178741\n",
-      "  1.11825307  0.08045703  0.53730523  0.63120253]\n"
+      "0.0234999515646783\n"
      ]
     }
    ],
    "source": [
-    "print(bcf_result[1][0:10])\n",
-    "resultq = bcf_result[0][0:10] + np.sum(z_test[0:10] * bcf_result[1][0:10], axis=1)\n",
-    "print(bcf.preprocessor.transform_y(resultq))\n",
-    "\n",
-    "print(bcf_result[2][0:10])\n",
-    "print(y_test[0:10])"
+    "print(mean_squared_error(bcf_result[2], y_test))"
    ]
   }
  ],
