--- a/notebooks/01_debug_incdata.ipynb
+++ b/notebooks/01_debug_incdata.ipynb
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 150/150 [00:04<00:00, 31.50it/s]\n"
+      "Iterations: 100%|██████████| 150/150 [00:04<00:00, 31.66it/s] \n"
      ]
     }
    ],
@@ -73,14 +73,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 39/39 [00:18<00:00,  2.10it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 31.26it/s]\n"
+      "100%|██████████| 39/39 [00:04<00:00,  9.48it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:00<00:00, 148.16it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bart_playground.bart.DefaultBART at 0x16c9a7b6310>"
+       "<bart_playground.bart.DefaultBART at 0x20406056710>"
       ]
      },
      "execution_count": 4,
@@ -111,10 +111,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 0 1 1 1 1 1 1 0 2 2 1 2 1 1 1 1 1 1 1 1 2 0 1 2 1 1 1 3 1 1 1 2 1 1 1\n",
-      " 1 1 2 2 1 1 1 1 1 1 1 0 1 0 1 2 3 1 2 1 1 1 1 2 2 0 1 3 1 2 1 1 0 1 2 1 2\n",
-      " 1 1 2 1 1 1 1 1 1 2 1 1 2 2 2 0 3 1 1 1 1 1 1 2 1 1]\n",
-      "(array([29, 53, 64, 90], dtype=int64),)\n"
+      "[2 2 1 2 1 1 0 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 2 1 1 1 2 2 2 1 2 1 2 1 1 1\n",
+      " 1 2 1 1 2 2 2 1 2 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 2 1 1 1 2 1 1 1 1 1 1 0 1\n",
+      " 1 2 3 1 2 3 3 2 1 2 1 1 1 1 2 1 2 1 2 1 1 1 1 1 1 1]\n",
+      "(array([76, 79, 80], dtype=int64),)\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00762701])}\n"
+      "{'eps_sigma2': array([0.00764589])}\n"
      ]
     }
    ],
@@ -152,11 +152,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.375 (split, n = 120)\n",
-      "\tVal: 0.021 (leaf, n = 70)\n",
-      "\tVal: -0.007 (leaf, n = 90)\n",
-      "[ 0 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[        nan  0.02123494 -0.0067989          nan         nan         nan\n",
+      "Val: -0.038 (leaf, n = 120)\n",
+      "[-1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
+      "[-0.03809807         nan         nan         nan         nan         nan\n",
       "         nan         nan         nan         nan         nan         nan\n",
       "         nan         nan         nan         nan]\n"
      ]
@@ -204,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.012859467216255988,\n",
+       "{'bart': 0.01129201268338717,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02328283761397566}"
@@ -238,8 +236,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.36285441  0.34324054  0.21345889  0.30186148  0.37323052  0.34360495\n",
-      " -0.28949465  0.43301502 -0.0490685   0.16001756  0.2003634   0.38512668]\n",
+      "[ 0.38564008  0.34454496  0.21448057  0.34649565  0.23765229  0.37498419\n",
+      " -0.38247364  0.40185921 -0.04601118  0.07795249  0.24988219  0.28845146]\n",
       "[ 0.34923863  0.42552948  0.17644883  0.38525745  0.35193784  0.46601776\n",
       " -0.49488025  0.4582753   0.0037892   0.14973307  0.30298339  0.25992003]\n"
      ]
