--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -285,7 +285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "btpg",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
