Update priors and samplers for changing tree nums

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 30.14it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:11<00:00, 17.34it/s]\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00573341])}\n"
+      "{'eps_sigma2': array([0.00573341]), 'ntree_controler': 189.92159953385493}\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.023709398713852352,\n",
+       "{'bart': 0.02370939871385235,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02328283761397566}"
