--- a/notebooks/break_combine.ipynb
+++ b/notebooks/break_combine.ipynb
@@ -145,7 +145,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1632af2f610>"
+       "<graphviz.graphs.Digraph at 0x2138e240ee0>"
       ]
      },
      "execution_count": 7,
@@ -255,7 +255,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1634b4260e0>"
+       "<graphviz.graphs.Digraph at 0x213ae6d6230>"
       ]
      },
      "execution_count": 9,
@@ -383,7 +383,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1634b4261a0>"
+       "<graphviz.graphs.Digraph at 0x213ae6d6380>"
       ]
      },
      "execution_count": 12,
@@ -454,7 +454,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1634b425a80>"
+       "<graphviz.graphs.Digraph at 0x213ae6d5ba0>"
       ]
      },
      "execution_count": 13,
@@ -546,7 +546,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1634b426710>"
+       "<graphviz.graphs.Digraph at 0x213ae6d6740>"
       ]
      },
      "execution_count": 15,
@@ -709,7 +709,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1634b4259c0>"
+       "<graphviz.graphs.Digraph at 0x213ae6d6290>"
       ]
      },
      "execution_count": 18,
